Add admin features, reviews system, cart UX improvements, and newsletter
Features added:
- Admin: product CRUD (add/edit/delete modals, sortable columns, image lightbox, tooltips)
- Admin: user emulation (MAIN_ADMIN only, warning bar, stop emulation)
- Admin: subscribers tab with user cross-reference
- Admin: newsletter broadcast history (record, view past sends)
- Admin: pending reviews queue (approve publishes review + updates product rating, reject discards)
- Reviews: public review modal with fake seeded data per product, clickable from product detail
- Reviews: logged-in users who purchased can submit reviews; submission stored + emailed to admins
- Cart: toast notification on add/update, product detail modal shows qty stepper when already in cart
- Newsletter: logged-in one-click subscribe/unsubscribe, state resets on user change
- Dark mode: account page and broadcast history body preview fixes
- Session timeout extended to 7 days
- application.properties removed from git tracking (contains secrets)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>